#79440 - Report - Solved in time - only Case Type grouping

--- a/ExtendedCase/ExtendedCase.WebApi/Web.config
+++ b/ExtendedCase/ExtendedCase.WebApi/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--Dev-->
-    <add name="GekasReceiptContext" connectionString="Data Source=DHUTVSQL5;Initial Catalog=GekasMockup;User Id=gekas;Password=gekas;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="GekasReceiptContext" connectionString="Data Source=DHUTVSQL5;Initial Catalog=GekasMockup;User Id=gekas;Password=gekas;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
     <!--DHUTVSQL6-->
-    <!--<add name="HelpdeskDb" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>-->
+    <add name="HelpdeskDb" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings />
   <helpdeskApiSettings webApiBaseUri="http://helpdesk/api/" />
