--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
+  <package id="Microsoft.Exchange.WebServices" version="2.2" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.9.0" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
 </packages>
