--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Models\Changes\ChangeListItem.cs" />
     <Compile Include="Models\ComputerUserCategoryOverview.cs" />
     <Compile Include="Models\ComputerUsers\ComputerUserCategoryData.cs" />
+    <Compile Include="Models\ComputerUsers\ComputerUserShort.cs" />
     <Compile Include="Models\Condition\ConditionModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextIdentifierModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextConditionModel.cs" />
