--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/packages.config
@@ -4,5 +4,7 @@
   <package id="DbExtensions" version="5.1.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="PostSharp" version="4.0.38" targetFramework="net472" />
-  <package id="Z.EntityFramework.Plus.EF6" version="1.8.25" targetFramework="net472" />
+  <package id="Z.EntityFramework.Extensions" version="4.0.69" targetFramework="net472" />
+  <package id="Z.EntityFramework.Plus.EF6" version="1.12.21" targetFramework="net472" />
+  <package id="Z.Expressions.Eval" version="3.1.10" targetFramework="net472" />
 </packages>
