--- a/ExtendedCase/ExtendedCase.Dal/ExtendedCase.Dal.csproj
+++ b/ExtendedCase/ExtendedCase.Dal/ExtendedCase.Dal.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\DapperExtensions.cs" />
     <Compile Include="Repositories\FormRepository.cs" />
+    <Compile Include="Repositories\GlobalSettingRepository.cs" />
     <Compile Include="Repositories\HelpdeskRespositoryBase.cs" />
     <Compile Include="Repositories\OptionDataSourceRepository.cs" />
     <Compile Include="Repositories\TranslationRepository.cs" />
