--- a/ExtendedCase/ExtendedCase.WebApi/ExtendedCase.WebApi.csproj
+++ b/ExtendedCase/ExtendedCase.WebApi/ExtendedCase.WebApi.csproj
@@ -127,6 +127,9 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ClientLogController.cs" />
     <Compile Include="Controllers\ExtendedCaseApiControllerBase.cs" />
+    <Compile Include="Controllers\FilesController.cs" />
+    <Compile Include="Infrastructure\Cors\WebApiCorsPolicyProvider.cs" />
+    <Compile Include="Infrastructure\Cors\WebApiCorsPolicyProviderFactory.cs" />
     <Compile Include="Infrastructure\Filters\TokensInterceptionFilter.cs" />
     <Compile Include="Controllers\CustomDataSourceDataController.cs" />
     <Compile Include="Controllers\OptionDataSourceDataController.cs" />
