--- a/ExtendedCase/ExtendedCase.WebComponent/tsconfig.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/tsconfig.json
@@ -17,7 +17,10 @@
     "types": [
       "node"
     ],
-    "baseUrl": ""
+    "baseUrl": "",
+    "paths": {
+      "@app/*": ["src/app/*"]
+    }
   },  
   "angularCompilerOptions": {
     "preserveWhitespaces": false
