--- a/ExtendedCase/ExtendedCase.WebApi/Web.config
+++ b/ExtendedCase/ExtendedCase.WebApi/Web.config
@@ -14,7 +14,9 @@
     <!--DHUTVSQL6-->
     <add name="HelpdeskDb" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  <appSettings />
+  <appSettings>
+    <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" />
+  </appSettings>
   <helpdeskApiSettings webApiBaseUri="http://helpdesk/api/" />
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
