--- a/ExtendedCase/ExtendedCase.Common/ExtendedCase.Common.csproj
+++ b/ExtendedCase/ExtendedCase.Common/ExtendedCase.Common.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\AppSettingsKey.cs" />
+    <Compile Include="Enums\FileViewLogFileSource.cs" />
     <Compile Include="Enums\ModuleNames.cs" />
     <Compile Include="JsonSerializeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
