--- a/ExtendedCase/ExtendedCase.WebComponent/tsconfig.aot.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/tsconfig.aot.json
@@ -16,7 +16,10 @@
         "types": [
           "node"
         ],
-        "baseUrl": ""
+        "baseUrl": "",
+        "paths": {
+          "@app/*": ["src/app/*"]
+        }
       },
       "compileOnSave": false,
       "buildOnSave": false,
