#85642 Differences Helpdesk 4 and 5 , Attachment in server and Otherfield to widetext

--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Enums\Inventory\Server\GeneralFields.cs" />
     <Compile Include="Enums\Inventory\Server\OtherFields.cs" />
     <Compile Include="Enums\Inventory\Server\StateFields.cs" />
+    <Compile Include="Enums\Inventory\Server\DocumentFields.cs" />
     <Compile Include="Enums\Inventory\Server\StorageFields.cs" />
     <Compile Include="Enums\Inventory\Shared\ChassisFields.cs" />
     <Compile Include="Enums\Inventory\Shared\InventoryFields.cs" />
