--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -466,6 +466,7 @@
     <Content Include="Areas\Admin\Content\js\CaseType\_input.js" />
     <Content Include="Areas\Admin\Content\js\DataPrivacy\_dataPrivacyForm.js" />
     <Content Include="Areas\Admin\Content\js\FileViewLog\fileViewLogForm.js" />
+    <Content Include="Areas\Admin\Content\js\System\index.js" />
     <Content Include="Areas\Inventory\Content\js\relatedCases.js" />
     <Content Include="Areas\Admin\Content\js\OrderType\index.logic.js" />
     <Content Include="Areas\Admin\Content\js\QuickLinks\index.logic.js" />
