--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -113,6 +113,8 @@
     <add key="SSO.EnableSlidingExpiration" value="true" />
     <add key="SSO.HandleSecurityTokenExceptions" value="true" />
     <add key="SSO.LogoutCustomerOnSessionExpire" value="false" />
+    <add key="reCaptchaSiteKey" value="6Lem1d4ZAAAAAL3W2FI7nrlqToDYQYqPjNeMEhZh" />
+    <add key="reCaptchaSecretKey" value="6Lem1d4ZAAAAACGdIZQDHvCq4CcuKLXGe9UhC-fZ" />
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
