#100592 Microsoft identity platform sign-in

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -70,7 +70,7 @@
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />-->
   </connectionStrings>
   <appSettings>
-    <add key="LoginMode" value="Windows" />
+    <add key="LoginMode" value="Microsoft" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="dh_filesDirectory" value="c:/temp" />
@@ -115,6 +115,12 @@
     <add key="SSO.LogoutCustomerOnSessionExpire" value="false" />
     <add key="reCaptchaSiteKey" value="6Lem1d4ZAAAAAL3W2FI7nrlqToDYQYqPjNeMEhZh" />
     <add key="reCaptchaSecretKey" value="6Lem1d4ZAAAAACGdIZQDHvCq4CcuKLXGe9UhC-fZ" />
+    
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientId" value="62972f9e-9859-49f4-877c-256f1b66e089" />
+    <add key="Tenant" value="a1f945cf-f91f-4b88-a250-a58e3dd50140" />
+    <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
+    <add key="redirectUri" value="https://localhost:64087/" />
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -133,10 +139,13 @@
   </location>-->
   <system.web>
     <customErrors mode="Off" />
-    <authorization>
+    <!--<authorization>
+      <deny users = "?" />
+    </authorization>-->
+    <!--<authorization>
       <allow users="*" />
-    </authorization>
-    <authentication mode="Windows" />
+    </authorization>-->
+    <authentication mode="None" />
     <httpRuntime targetFramework="4.7.2" requestValidationMode="4.7.2" />
     <compilation targetFramework="4.7.2" debug="true">
       <assemblies>
@@ -177,7 +186,11 @@
     </staticContent>
   </system.webServer>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">            
+      <!--<dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>-->
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31BF3856AD364E35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
@@ -208,7 +221,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Data" publicKeyToken="b77a5c561934e089" culture="neutral" />
@@ -250,6 +263,22 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <!--<dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Tokens" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.8.0.0" newVersion="6.8.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Protocols.OpenIdConnect" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.8.0.0" newVersion="6.8.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Protocols" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.8.0.0" newVersion="6.8.0.0" />
+      </dependentAssembly>-->
     </assemblyBinding>
     <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
          to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
@@ -299,5 +328,11 @@
       <wsFederation passiveRedirectEnabled="true" issuer="https://fs.dhsolutions.se/adfs/ls/" realm="https://localhost:44340/" requireHttps="false" />
     </federationConfiguration>
   </system.identityModel.services>
+  <!--<system.codedom>
+    <compilers>
+      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </compilers>
+  </system.codedom>-->
 </configuration>
 <!--ProjectGuid: {9DBE7D20-DEE8-427C-9A68-FC338B1108FC}-->
