--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/packages.config
@@ -14,17 +14,28 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="1.7" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net472" />
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net472" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Plupload" version="1.5.7.1" targetFramework="net472" />
   <package id="PostSharp" version="4.0.38" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="1.0.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry" version="4.5.1" targetFramework="net472" />
   <package id="Thinktecture.IdentityModel" version="3.6.1" targetFramework="net472" />
   <package id="WebActivator" version="1.5" targetFramework="net472" />
