--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -120,7 +120,7 @@
     <add key="ClientId" value="62972f9e-9859-49f4-877c-256f1b66e089" />
     <add key="Tenant" value="a1f945cf-f91f-4b88-a250-a58e3dd50140" />
     <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
-    <add key="redirectUri" value="https://localhost:64087/" />
+    <add key="RedirectUri" value="https://localhost:44396" />
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -145,7 +145,10 @@
     <!--<authorization>
       <allow users="*" />
     </authorization>-->
-    <authentication mode="None" />
+    <!--<authentication mode="None" />-->
+    <!--<authorization>
+      <allow users="*"/>
+    </authorization>-->
     <httpRuntime targetFramework="4.7.2" requestValidationMode="4.7.2" />
     <compilation targetFramework="4.7.2" debug="true">
       <assemblies>
