#100592 Microsoft identity platform sign-in

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -116,9 +116,14 @@
     <add key="reCaptchaSiteKey" value="6Lem1d4ZAAAAAL3W2FI7nrlqToDYQYqPjNeMEhZh" />
     <add key="reCaptchaSecretKey" value="6Lem1d4ZAAAAACGdIZQDHvCq4CcuKLXGe9UhC-fZ" />
     
+    
+    <!--For Microsoft Azure Authentication-->
     <add key="webpages:Enabled" value="false" />
-    <add key="ClientId" value="62972f9e-9859-49f4-877c-256f1b66e089" />
-    <add key="Tenant" value="a1f945cf-f91f-4b88-a250-a58e3dd50140" />
+    <add key="ClientId" value="62972f9e-9859-49f4-877c-256f1b66e089" /> <!--DH Labbet-->
+    <!--<add key="ClientId" value="d731c862-2d94-47e6-a422-9c94c2b72cf3" />-->   <!--DH Solutions Azure--> 
+    <add key="Tenant" value="common" /> <!--If your application supports My organization only, replace this value with the Tenant Id or Tenant name (for example, contoso.onmicrosoft.com)
+    If your application supports Accounts in any organizational directory, replace this value with "organizations"
+    If your application supports All Microsoft account users, replace this value with "common"-->
     <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
     <add key="RedirectUri" value="https://localhost:44396" />
   </appSettings>
@@ -145,7 +150,7 @@
     <!--<authorization>
       <allow users="*" />
     </authorization>-->
-    <!--<authentication mode="None" />-->
+    <authentication mode="None" />
     <!--<authorization>
       <allow users="*"/>
     </authorization>-->
