--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -86,6 +86,15 @@
     <add key="AM_Api_Password" value="#{AmApiPassword}" />
 
     #{/if}
+    #{if MicrosoftAuthConfigurable}
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientId" value="#{ClientId}" /> 
+    <add key="Tenant" value="#{Tenant}" /> <!--If your application supports My organization only, replace this value with the Tenant Id or Tenant name (for example, contoso.onmicrosoft.com)
+    If your application supports Accounts in any organizational directory, replace this value with "organizations"
+    If your application supports All Microsoft account users, replace this value with "common"-->
+    <add key="Authority" value="#{Authority}" />
+    <add key="RedirectUri" value="#{RedirectUri}" />
+    #{/if}
   </appSettings>
 
   <!--
