--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config.template
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
   <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <file value="../Logs/Logs.log" />
     <appendToFile value="true" />
-    <MaximumFileSize value="1000KB" />    
-    <MaxSizeRollBackups value="5" />    
+    <rollingStyle value="Date" />
+    <datePattern value="-yyyy-MM-dd.lo\g" />
+    <MaxSizeRollBackups value="14" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%newline%date; %level; %message%newline" />
     </layout>
@@ -20,7 +21,7 @@
       <conversionPattern value="%date{dd MMM yyyy HH:mm:ss} - %m%n" />
     </layout>
   </appender>
-  <logger name="AppErrorLog">
+  <logger name="AppErrorLog"> 
     <level value="ALL" />
     <appender-ref ref="RollingLogFileAppender" />
   </logger>
