--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <log4net debug="false">
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <lockingmodel type="log4net.Appender.FileAppender+MinimalLock" />
-    <param name="File" value="Logs/Debug.log" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaximumFileSize" value="1000KB" />
-    <param name="MaxSizeRollBackups" value="5" />
+    <file value="../Logs/Logs.log" />
+    <appendToFile value="true" />
+    <rollingStyle value="Date" />
+    <datePattern value="-yyyy-MM-dd.lo\g" />
+    <MaxSizeRollBackups value="14" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date{dd MMM yyyy HH:mm:ss} %-5p %c - %m%n" />
+      <conversionPattern value="%newline%date; %level; %message%newline" />
     </layout>
   </appender>
   <appender name="SessionRollingFileAppender" type="log4net.Appender.RollingFileAppender">
