--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <log4net debug="false">
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="../Logs/Logs.log" />
+    <file value="Logs/Logs.log" />
     <appendToFile value="true" />
     <rollingStyle value="Date" />
     <datePattern value="-yyyy-MM-dd.lo\g" />
