--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/log4net.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/log4net.config.template
@@ -2,7 +2,7 @@
 <!-- testing branching with build server, again, again -->
 <log4net>
   <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="../Logs/Logs.log" />
+    <file value="Logs/Logs.log" />
     <appendToFile value="true" />
     <rollingStyle value="Date" />
     <datePattern value="-yyyy-MM-dd.lo\g" />
@@ -30,7 +30,7 @@
   </appender>
   <appender name="SessionRollingFileAppender" type="log4net.Appender.RollingFileAppender">
     <lockingmodel type="log4net.Appender.FileAppender+MinimalLock" />
-    <param name="File" value="../Logs/session.log" />
+    <param name="File" value="Logs/session.log" />
     <param name="AppendToFile" value="true" />
     <param name="MaximumFileSize" value="1000KB" />
     <param name="MaxSizeRollBackups" value="5" />
