--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
@@ -803,6 +803,7 @@
     <Content Include="log4net.config.template">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="_app_offline.htm" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-1.8.3.min.js" />
