#105349 - Task - Default - Several tabs in Self Service

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ dhHelpdeskMobile/.vs/
 *.npmrc
 /ExtendedCase/ExtendedCase.Database/ExtendedCase.Database.dbmdl
 /ExtendedCase/ExtendedCase.Database/ExtendedCase.Database.dbmdl
+/dhHelpdeskNG/UpgradeLog2.htm
