111972 - Bug - Unplanned - Report - Report for Extended case fields can't handle value to display if the value contains html tags

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -91,7 +91,9 @@
     <add key="CaseList" value="coworkers" />
     <!-- "SelfService", "LineManager" -->
     <add key="CurrentApplication" value="LineManager" />
-    <!-- add key="ShowCommunicationForSelfService" value="true" -->
+
+	<add key="ShowCommunicationForSelfService" value="false" />
+
     <!-- Single Sign Keys-->
     <add key="ApplicationId" value="Line Manager" />
     <add key="ClaimDomain" value="DomainName" />
