New Rebex in M2T and Typo in TaskScheduler

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/DH.Helpdesk.Mail2Ticket.vbproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/DH.Helpdesk.Mail2Ticket.vbproj
@@ -106,20 +106,33 @@
       <HintPath>..\packages\Microsoft.Identity.Client.4.9.0\lib\net45\Microsoft.Identity.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Rebex.Mail">
-      <HintPath>..\..\..\Dependencies\Rebex.Mail.dll</HintPath>
+    <Reference Include="Rebex.Common, Version=5.0.7733.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Rebex.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Rebex.Net.Imap">
-      <HintPath>..\..\..\Dependencies\Rebex.Net.Imap.dll</HintPath>
+    <Reference Include="Rebex.Ews, Version=5.0.7733.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Rebex.Ews.dll</HintPath>
     </Reference>
-    <Reference Include="Rebex.Net.ProxySocket">
-      <HintPath>..\..\..\Dependencies\Rebex.Net.ProxySocket.dll</HintPath>
+    <Reference Include="Rebex.Imap, Version=5.0.7733.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Rebex.Imap.dll</HintPath>
     </Reference>
-    <Reference Include="Rebex.Net.SecureSocket">
-      <HintPath>..\..\..\Dependencies\Rebex.Net.SecureSocket.dll</HintPath>
+    <Reference Include="Rebex.Mail, Version=5.0.7733.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Rebex.Mail.dll</HintPath>
     </Reference>
-    <Reference Include="Rebex.Security">
-      <HintPath>..\..\..\Dependencies\Rebex.Security.dll</HintPath>
+    <Reference Include="Rebex.Networking, Version=5.0.7733.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Rebex.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="Rebex.Pop3, Version=5.0.7733.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Rebex.Pop3.dll</HintPath>
+    </Reference>
+    <Reference Include="Rebex.Smtp, Version=5.0.7733.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Rebex.Smtp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -215,23 +228,23 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Dependencies\Rebex.Mail.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Dependencies\Rebex.Common.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Dependencies\Rebex.Net.Imap.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Dependencies\Rebex.Ews.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Dependencies\Rebex.Net.Pop3.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Dependencies\Rebex.Imap.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Dependencies\Rebex.Net.ProxySocket.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Dependencies\Rebex.Networking.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Dependencies\Rebex.Net.SecureSocket.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Dependencies\Rebex.Pop3.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Dependencies\Rebex.Security.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Dependencies\Rebex.Smtp.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
