CaseNo 127852  In Progress And 135048 - Bug - Mail2ticket - M2T doesn't always create case if Subject is missing And 104960 - Missing files

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config.template
@@ -12,6 +12,9 @@
     <add key="LogFolder" value="" /> <!--Example: C:\temp-->
     <add key="LogIdentifier" value="" /> <!-- -->
     <add key="ProductAreaSeparator" value="" /> <!--separator symbol. Example: ;-->
+	<add key="DefaultSmtpServer" value="" /><!--smtp.datahalland.se -->
+	<add key="ErrorMailFrom" value="" /> <!-- testhelpdesk@dhsolutions.se -->
+	<add key="ErrorMailTo" value="" />  <!-- fredrik.landh@dhsolutions.se -->
   </appSettings>
   <connectionStrings>
     <add name="Helpdesk" connectionString="Data Source=#{DatabaseServer}; Initial Catalog=#{DatabaseName}; User Id=#{DatabaseUser}; Password=#{DatabasePassword};Network Library=dbmssocn" />
