104960 - Task - Default - Cleaned up C:\websites-deploy\acc.selfservice.internal.datahalland.se

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
@@ -805,9 +805,6 @@
     <Content Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="bin\DH.Helpdesk.SelfService.dll.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-1.8.3.min.js" />
@@ -1080,6 +1077,7 @@
     <Content Include="Views\Case\_CaseLogNote.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bin\" />
     <Folder Include="Content\highlighter\" />
     <Folder Include="FormLibContent\Areas\" />
     <Folder Include="FormLibContent\Assemblies\" />
